--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <html>
 <head>
 <link rel="stylesheet" href="styles.css" type="text/css"></link>
+<title>
+  Chinese Cynical Realism
+</title>
 </head>
 
 <body>
@@ -34,5 +37,12 @@
   </div>
 </div>
 </div>
+
+
 </body>
+
+<div class="link">
+  <a href="http://www.visual-arts-cork.com/history-of-art/cynical-realism.htm#cynicalrealists">Chinese Cynical Realism</a>
+</div>
+
 </html>
